--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,16 @@
+html {
+    font-family: 'Roboto';
+}
+
+body {
+    font-size: 14px;
+    line-height: 20px;
+    margin: 0px;
+}
+span {
+    font-size: 14px;
+}
+
 .app-bar-user-img{
     position: absolute;
     left: 55px;
@@ -6,57 +19,99 @@
     position: absolute;
     left: 115px;
     top: 15px;
-    font-family: Roboto;
     color: white;
 }
 
-.panel-list {
-    position: absolute;
-    width: 450px;
-}
-.panel-list-header {
+.panel-container{
     background: #5c6bc0;
     height: 48px;
+}
+.panel-list {
+    position: absolute;
+    width: 400px;
+    min-width: 400px;
+}
+.panel-list-header {
+    height: 48px;
+}
+.panel-list-btn {
+    float: right;
+    margin: 10px;
 }
 .panel-list-length {
     border-radius: 25px;
     background: #e0e0e0;
-    padding: 5px 15px 5px 15px;
+    padding: 5px 25px 5px 25px;
 }
 .panel-list-container {
+    display:block;
+    width: 100%;
+    min-width: 400px;
     height: 670px;
     overflow: auto;
 }
-.panel-tab {
-    padding-left: 450px;
+.no-record{
+    height: 70px;
+    line-height: 70px;
+    text-align: center;
+    vertical-align: middle;
+    background: #f6f6f6;
+    color: #aaaaaa;
 }
-.content{
-    margin: 20px 35px 20px 35px;
-    float: left;
-}
-
 .panel-list-add {
     position: absolute;
-    right: 10px;
-    top: 450px;
+    left: 325px;
+    bottom: 15%;
 }
+
+.panel-tab {
+    padding-left: 400px;
+}
+.content-container{
+    min-height: 630px;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
+}
+.content-header{
+    margin: 25px 50px 10px 50px;
+}
+.content{
+    float: left;
+    min-width: 300px;
+    margin: 10px 25px 10px 25px;
+}
+.content-dialog {
+    min-height: 600px;
+}
+
 .foot {
-    position: absolute;
-    height: 48px;
-    width: calc(100% - 466px);
-    bottom: 0px;
-    padding-left: 450px;
     background: #5c6bc0;
-    z-index: 1;
+    height: 48px;
+    position: relative;
+    padding-top: 5px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
 }
 .foot-btn {
     float: right;
-    vertical-align: middle;
-    margin-right: 50px;
+    margin: 0px 10px 0px 10px;
 }
 
-.contentDialog {
-    min-height: 600px;
+@media only screen and (max-width: 766px){
+    .panel-tab, .foot {
+       display: none;
+    }
+    .panel-list {
+        width: 100%;
+    }
+    .panel-list-add {
+        position: absolute;
+        left: 80%;
+        bottom: 15%;
+    }
 }
 
 /*
