--- a/public/styles.css
+++ b/public/styles.css
@@ -42,6 +42,7 @@ span {
     border-radius: 25px;
     background: #e0e0e0;
     padding: 5px 25px 5px 25px;
+    color: #3F51B5;
 }
 .panel-list-container {
     display:block;
